[package]
name = "invoker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/layout_compiler"
]

[dependencies]
layout_compiler = {path = "crates/layout_compiler", version = "0.1.0"}
